# interfamily-agent

./: .deepeval-cache.json  .env.example  .gitignore  Dockerfile  README.md  app.py  backend_runner.py  chainlit.md  console.py  main.py  pyproject.toml
agent/: ifs_prompt.py  memory_agent.py
domain/: prompt.py  server.py  session.py  store.py
domain/models/: __init__.py  comfort_part.py  explore_part.py  general_response.py  part.py  transport_part.py  unblending.py  unburden_part.py  user_intro.py  user_outro.py
domain/workflows/: __init__.py  comfort_part_workflow.py  explore_part_workflow.py  part_workflow.py  transport_part_workflow.py  unblending_workflow.py  unburden_part_workflow.py  user_intro_workflow.py  user_outro_workflow.py
domain/workflows/images/: base_image.py  part_description_image.py
lib/: agent.py  base_workflow.py  model_updater.py  workflow_utils.py
templates/: index.html
tests/: eval.py  example_data.py
tests/experiments/: console.py  data.py  langsmith_eval.py  manage_datasets.py  pull_past_data.py  test_chain_outputs.py
tests/langsmith_lib/: pull_past_data.py
tests/unit/: test_get_prompt_and_inputs.py  test_parse_details.py  test_parse_details_router.py
tests/unit/models/: test_base_image.py  test_part.py  test_user_intro.py
tests/unit/workflows/: test_part_workflow.py  test_user_intro_parts_workflows.py
tests_deepeval/: readme.md  test_workflow_invocations.py
